feature: 接口优化